logs/sxdump.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bcrypt'...
Listing './lib/python3.5/site-packages/dogpile'...
Listing './lib/python3.5/site-packages/dogpile/cache'...
Listing './lib/python3.5/site-packages/dogpile/cache/backends'...
Listing './lib/python3.5/site-packages/dogpile/cache/plugins'...
Listing './lib/python3.5/site-packages/dogpile/core'...
Listing './lib/python3.5/site-packages/dogpile.cache-0.5.7.egg-info'...
Listing './lib/python3.5/site-packages/dogpile.core-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_bcrypt-0.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sxclient'...
Listing './lib/python3.5/site-packages/sxclient/models'...
Listing './lib/python3.5/site-packages/sxclient/operations'...
Listing './lib/python3.5/site-packages/sxclient/query'...
Compiling './lib/python3.5/site-packages/sxclient/query/query_handler.py'...
***   File "./lib/python3.5/site-packages/sxclient/query/query_handler.py", line 148
    raise exc, str(err_val) + ' ' + resp_msg, err_tb
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sxclient/tools'...
Listing './lib/python3.5/site-packages/sxclient-0.16.4.egg-info'...
Listing './lib/python3.5/site-packages/sxdump'...
Compiling './lib/python3.5/site-packages/sxdump/createvol.py'...
***   File "./lib/python3.5/site-packages/sxdump/createvol.py", line 20
    print create_volume(
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sxdump/makecmds.py'...
***   File "./lib/python3.5/site-packages/sxdump/makecmds.py", line 285
    print "Generating %s and %s" % (OLD, NEW)
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sxdump-2.0.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
